   @config. Use @list/<switch> instead. [MG]
 * @decompile changes: added /name, the opposite of /db. You can now give a
   '=<prefix>' without needing the /prefix switch, and can use other
   switches with /tf, like @decomp/tf/flags <obj>. Suggestedby Trinsec. [MG]
 * @entrances can now take multiple switches, to show multiple types. [MG]
 * Removed the obsolete @map command. [MG]

Functions:
 * llocks() without any arguments returns a list of the standard locks.
 * unsetq(), to erase queue registers. [GM]
 * and[l]flags(), or[l]flags(), andlpowers() and orlpowers() now all return
   #-1 if an invalid flag/power is given. Suggested by AnneLions. [MG]
 * benchmark(), to benchmark softcode.
 * Added "flag" as a category to valid(), to check for valid names for
   @flag/add and @power/add. [MG]

Fixes:
 * Bug caused by silly assumptions in list2arr() regarding remove_markup
   fixed. Reported by Stoko@M*U*S*H. [GM]
 * Using some substitutions on the connect/motd/etc attributes introduced
   in p11 could cause a crash. Reported by Minion@M*U*S*H. [GM]
 * Substitions on the connect/motd/etc attributes now work as expected
   when a player is connected. Suggested by Minion@M*U*S*H. [GM]
 * English matching works better with possessive get
   (get box's 2nd thing). Reported by israphel.
 * Many more messages generated by the server have been 
   marked as translatable. By Stoko.
 * 'No such file' messages were logged by mistake when connect_file and
   similar options were set to a dbref/attr. Reported by Zalethon. [MG]
 * Some cygwin C library versions define the imaxdiv_t type but not the
   associated imaxdiv() function. Split them up into 2 configure checks.
   Reported by Rankard.
 * Several math functions didn't complain if their first argument wasn't
   a valid number. Reported by Jules. [MG]
 * @wipe would incorrectly set the attribute list for an object in some 
   cases, making some attributes appear to be deleted. Reported by
   Cooee@M*U*S*H. [MG]