@@ -555,18 +555,20 @@ See also: use, @charges, @runout, ACTION LISTS
 See also: @idle, @haven
 & @boot
   @boot[/silent] <player>
-  @boot/port <descriptor number>
+  @boot/port[/silent] <descriptor number>
   @boot/me
 
-  The first form of this command disconnects <player>'s latest connection
-  from the game. If the /silent switch is given, the message telling <player>
-  he was booted is suppressed.
+  The first form of this command disconnects all of <player>'s connections
+  from the game.
   
   The /port switch disconnects a particular descriptor (as shown under "Des"
-  in the Wizard WHO, returned by lports(), etc).
+  in the Wizard WHO, returned by lports() and ports(), etc).
+  
+  If the /silent switch is given, the message telling <player> he was booted 
+  is suppressed.
 
-  The /me switch boots any single descriptor for the player using the command
-  which has been idle for over 1 minute. Players can use this command to 
+  The /me switch boots all descriptors for the player using the command 
+  which have been idle for over 1 minute. Players can use this command to 
   terminate hung connections.
 
   Only admin and those with the "boot" power can @boot other players.
