@@ -55,6 +55,7 @@ extern time_t mudtime;
 extern int shutdown_flag;       /* if non-zero, interface should shut down */
 void emergency_shutdown(void);
 void boot_desc(DESC *d);        /* remove a player */
+int boot_player(dbref player, int idleonly, int slilent);
 DESC *player_desc(dbref player);        /* find descriptors */
 DESC *inactive_desc(dbref player);      /* find descriptors */
 DESC *port_desc(int port);      /* find descriptors */
@@ -109,6 +110,7 @@ int hidden(dbref player);
 dbref guest_to_connect(dbref player);
 void dump_reboot_db(void);
 void close_ssl_connections(void);
+DESC *least_idle_desc(dbref player, int priv);
 int least_idle_time(dbref player);
 int least_idle_time_priv(dbref player);
 int most_conn_time(dbref player);
